[package]
name = "conll"
version = "0.1.0"
edition = "2021"
authors = ["Alexander P"]
license = "MIT"
description = "Parser for CoNLL(-U) Treebanks"
repository = "https://github.com/pcranaway/conll"
homepage = "https://github.com/pcranaway/conll"
keywords = ["conll", "conll-u", "conllu", "treebank", "nlp"]

[[bin]]
name = "parse"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
